assets/Layout/TopBar.scss
@use '~@material/form-field';
@use '~@material/icon-button';
@use '~@material/icon-button/styles';
@use '~@material/top-app-bar/mdc-top-app-bar';
@use '~@material/textfield';
@import './Variables';
@import './Mixins';
@import '../Components/MdcMenu';
@include textfield.core-styles;
@include form-field.core-styles;

// ---- Default Header

.mdc-top-app-bar {
  z-index: 5000;

  a {
    color: inherit;

    &:hover {
      color: currentcolor;
      text-decoration: none;
    }
  }
}

.mdc-top-app-bar__section {
  padding: 0;
}

.mdc-top-app-bar__title {
  padding-left: 0.2rem;
}

// ---- SEARCH Header

#top-app-bar__search-form {
  position: relative;
  width: 100%;
  height: 100%;

  // Show placeholder text only when query is empty
  input[required]:invalid + label[placeholder][alt]::before {
    content: attr(alt);
  }

  input {
    width: 100%;
    height: 100%;
    color: #fff;
    background-color: var(--primary);
    border: none;
    outline: none;
  }

  input[type='search']::-webkit-search-cancel-button {
    // provide same experience on all browsers
    display: none;
  }

  label {
    position: absolute;
    top: 50%;
    display: block;
    color: #fff;
    pointer-events: none;
    transform: translateY(-50%);
  }
}

// ---- Options

#sign-app-ellipsis-container {
  top: 0;
  right: 0;
  display: none;
  color: light-dark(#000, #e2e8f0);
  border-radius: 0;

  ul {
    display: block;
    margin-block-end: 0;
  }

  .top-app-bar-btn-options {
    display: block;
    padding: 0.5em 1em;
    text-align: left;
  }
}

// Dark mode for options menu
.mdc-menu-surface {
  background-color: light-dark(#fff, #2d2d3d);
  color: light-dark(#000, #e2e8f0);
}

.mdc-deprecated-list-item__graphic.material-icons {
  color: light-dark(rgb(0 0 0 / 60%), rgb(255 255 255 / 70%));
}

.mdc-deprecated-list-item__text {
  color: light-dark(rgb(0 0 0 / 87%), rgb(255 255 255 / 87%));
}

// Keep the body below the top-bar

.page-content {
  @media (width <= 599px) {
    margin-top: 56px; // mdc-top-app-bar__row
  }

  margin-top: 64px; // mdc-top-app-bar__row
}

